- Reworked Curio items
- Reworked Lexicon
- Reworked Mod Balance
- Reworked Shadewood tree
- Reworked Void Grass
- Reworked Goblin AI
- Reworked Goblin Model From default Model to Humanoid, so they can hold items in hand
- Reworked Kunais's
- Reworked Item2DRenderer for better compatibility with other mods that can use it
- Reworked Sarcophagus
- Reworked Mannequin

- Resprited Void stone
- Resprited Uncharged Shard
- Resprited Wicked Amethyst
- Resprited Wicked Amethyst Item
- Resprited Soul shard
- Resprited Cattail
- Resprited Bloodhound
- Resprited Murasama
- Resprited Yamato
- Resprited Shadewood Planks and related items

- Renamed Uncharged Stone -> Uncharged Shard
- Renamed Soulstone -> Soul shard
- Renamed Amethyst (mod one btw) -> Wicked Amethyst
- Renamed Keyblocks to Umbral Blocks

- Prospectors pick now breaks ICE blocks much faster
- Server sided most of the particles
- Golden accessories makes Piglin neutral now
- Accessories will be damaged when player was attacked
- Goblins can take weapons to hand
- Goblins can spawn with weapons in hand with chance
- Necklaces will change their size depending on armor

- Fixed Misspells in Sounds tooltips
- Fixed Misspell in Jewelry JEI
- Fixed Coffe -> Coffee
- Fixed 1 pixel Y offset in jei
- Fixed Plants LootTable
- Fixed Baby Goblins
- Fixed Bug - Goblins tried to attack creative player when was hurt
- Fixed Bug - When multiple items were in cooldown, the sound would be very loud
- Fixed Bug - Necklaces now bigger than player 2'nd layer
- Fixed Entities attributes
- Fixed Crash - When HitResult.getType() was MISS game decides to crash (Blazereap)
- Fixed Server errors in KatanaItem and CorpsecleaverItem - Client sided a ClientConfig checking
- Fixed Server error - Cant call the "/valoria addPage/removePage" command
- Fixed Bug - Damage from Scythes / Katanas etc. damaged through armor and through FTB Chunks
- Fixed 1 pixel offset of Bloodhound icon in gui